@@ -27,19 +27,8 @@
      <property name="spacing" >
       <number>6</number>
      </property>
-     <item row="0" column="0" >
-      <widget class="QLabel" name="label" >
-       <property name="text" >
-        <string>Id</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1" >
-      <widget class="QLabel" name="Id" >
-       <property name="text" >
-        <string>xxx</string>
-       </property>
-      </widget>
+     <item row="2" column="1" >
+      <widget class="QComboBox" name="Highway" />
      </item>
      <item row="1" column="0" >
       <widget class="QLabel" name="label_3" >
@@ -51,24 +40,21 @@
      <item row="1" column="1" >
       <widget class="QLineEdit" name="Name" />
      </item>
-     <item row="2" column="0" >
-      <widget class="QLabel" name="label_5" >
+     <item row="0" column="1" >
+      <widget class="QLabel" name="Id" >
        <property name="text" >
-        <string>Type</string>
+        <string>xxx</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1" >
-      <widget class="QComboBox" name="Highway" />
-     </item>
-     <item row="3" column="0" >
-      <widget class="QLabel" name="label_2" >
+     <item row="0" column="0" >
+      <widget class="QLabel" name="label" >
        <property name="text" >
-        <string>Direction</string>
+        <string>Id</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="1" >
+     <item row="4" column="1" >
       <widget class="QComboBox" name="TrafficDirection" >
        <item>
         <property name="text" >
@@ -91,6 +77,30 @@
         </property>
        </item>
       </widget>
+     </item>
+     <item row="2" column="0" >
+      <widget class="QLabel" name="label_5" >
+       <property name="text" >
+        <string>Type</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0" >
+      <widget class="QLabel" name="label_2" >
+       <property name="text" >
+        <string>Direction</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0" >
+      <widget class="QLabel" name="label_6" >
+       <property name="text" >
+        <string>Landuse</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1" >
+      <widget class="QComboBox" name="LandUse" />
      </item>
     </layout>
    </item>
@@ -139,6 +149,14 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>Name</tabstop>
+  <tabstop>Highway</tabstop>
+  <tabstop>LandUse</tabstop>
+  <tabstop>TrafficDirection</tabstop>
+  <tabstop>RemoveTagButton</tabstop>
+  <tabstop>TagView</tabstop>
+ </tabstops>
  <resources>
   <include location="Icons/AllIcons.qrc" />
  </resources>
